# bironorbert_llm_training

./: CART_IMPLEMENTATION.md  README.md
03_python_fastapi_project/: .env  database.db  database.py  main.py  migrate_db.py  nginx-cors.conf  nginx-http.conf  pyproject.toml
03_python_fastapi_project/ssl/: localhost.crt  localhost.key  starter.sh
05_design/: PROJECT_SUMMARY.md  QUICKSTART.md  start-frontend.ps1
05_design/product-management-app/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
05_design/product-management-app/src/: index.html  styles.scss
05_design/product-management-app/src/app/: app.routes.ts  app.scss  app.spec.ts  app.ts
05_design/product-management-app/src/app/components/cart/: cart.component.html  cart.component.scss  cart.component.ts
05_design/product-management-app/src/app/components/product-detail/: product-detail.component.html  product-detail.component.scss  product-detail.component.ts
05_design/product-management-app/src/app/components/product-form/: product-form.component.html  product-form.component.scss  product-form.component.ts
05_design/product-management-app/src/app/components/product-list/: product-list.component.html  product-list.component.scss  product-list.component.ts
05_design/product-management-app/src/app/models/: product.model.ts
05_design/product-management-app/src/app/services/: cart.service.ts  product.service.ts
